tests/pass/assignment_and_ref.py
a: int = 10
b: float = 10.5
c: bool = True
d: str = "Test"
e: None = None
f = 10
g = 10.5
h = True
i = "Test"
j = None

assert a == 10
assert b == 10.5
assert c == True
assert d == "Test"
assert e == None
assert f == 10
assert g == 10.5
assert h == True
assert i == "Test"
assert j == None
